fix: scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,6 +20,10 @@
     font-display: swap;
 } */
 
+html {
+    scrollbar-gutter: stable;
+}
+
 body {
     color: var(--foreground);
     background-color: var(--background);
